--- a/style.css
+++ b/style.css
@@ -1,91 +1,21 @@
-body {
-    margin: 0;
-    background-color: #f3f3f3;
-    font-family: Arial, sans-serif;
-}
-
-.header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #dcea81;
-    padding: 20px;
-    color: rgb(13, 10, 61);
-}
-
-.header h2 {
-    margin: 0;
-}
-
-.social-icons img {
-    width: 30px;
-    height: 30px;
-    margin-left: 10px;
-}
-
-.cards-container {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    padding: 20px;
-}
-
 .card {
-    width: 320px;
-    border-radius: 20px;
-    color: white;
-    padding: 20px;
-    overflow: hidden;
-    text-align: left;
-    margin: 10px;
+    height: 100%;
+    /* make all cards same height inside column */
 }
 
-.card h1 {
-    font-size: 25px;
-    margin: 10px 0;
+.card-img-top {
+    height: 300px;
+    /* choose any height you want */
+    object-fit: cover;
+    /* keeps image centered and cropped */
 }
 
-.card p {
-    margin: 8px 0;
-    line-height: 1.4;
-}
-
-.card img {
-    width: 100%;
-    height: 70%;
-    margin-top: 20px;
-    border-radius: 0 0 20px 20px;
-}
-
-.max {
-    background: linear-gradient(to bottom, #b9381e, #000);
-}
-
-.iphone17 {
-    background: linear-gradient(to bottom, #a287e7, #000);
-}
-
-.air {
-    background: linear-gradient(to bottom, #92abe2, #000);
-}
-
-.pixelfold {
-    background: linear-gradient(to bottom, #58688d, #000);
-}
-
-.pixelpro {
-    background: linear-gradient(to bottom, #588d78, #000);
-}
-
-.pixel {
-    background: linear-gradient(to bottom, #9aaf69, #000);
-}
-
-.Footer {
+.card-body {
     display: flex;
-    justify-content: center;
-    background-color: #d581ea;
-    padding: 20px;
-    color: rgb(13, 10, 61);
+    flex-direction: column;
+}
+
+.card-body .btn {
     margin-top: auto;
+    /* push button to bottom */
 }
